added image, fixed delta time on stop and start

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
     </head>
     
-    <body>
+    <body style="background: #f1f1f1;">
 		
 		<div id="speedometer"></div>
     
@@ -23,8 +23,7 @@
 		<script type="text/javascript">
       var speedometer = new Speedometer({
         id: "speedometer",
-        width: 256,
-        height: 256,
+        height: 512,
         value: 50,
         total: 100
       });
